--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,10 @@ name: MardsMiniGames
 version: '${project.version}'
 main: com.mards.mardsminigames.MardsMiniGames
 api-version: '1.16'
+commands:
+  mardsminigame:
+    usage: /<command> [minigame]
+    permission: mardsmimigame
+    permission-message: you dont have permission to do this
+    aliases:
+      - mmg:
